

# Changelog:

- *added* API.UnlockTitleForPlayer aus QSB2.