@@ -3,3 +3,4 @@
 # Changelog:
 
 - *added* API.UnlockTitleForPlayer aus QSB2.
+- *added* History Edition Editor Sprachenfix.
